# madvr-envy-homeassistant

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  SYNC_NOTES.md  hacs.json  pyproject.toml  release-please-config.json  requirements_test.txt
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  release-please.yml  tests.yml  update-madvr-envy.yml  validate.yml
custom_components/madvr_envy/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  lifecycle.py  manifest.json  models.py  remote.py  select.py  sensor.py  services.py  store.py  strings.json  switch.py  wol.py
custom_components/madvr_envy/translations/: en.json
scripts/: update_madvr_envy_version.sh
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entities.py  test_init.py  test_platform_setup.py  test_services.py
